<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".HomeActivity"
    tools:openDrawer="start">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorAccent"
            android:gravity="top"
            android:inputType="text"
            android:visibility="invisible"
            android:imeOptions="actionSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/root_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_constraintTop_toBottomOf="@id/search_edit_text">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/app_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/home_app_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:elevation="4dp"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:titleTextColor="@android:color/white" />


            </android.support.design.widget.AppBarLayout>

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/app_bar_layout"
                android:fillViewport="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <GridLayout
                        android:id="@+id/category_grid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:columnCount="5"
                        android:orientation="vertical"
                        android:rowCount="2">

                        <ImageView
                            android:id="@+id/category_New"
                            android:layout_width="70dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="20dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/new1" />

                        <TextView
                            android:layout_gravity="center_horizontal"
                            android:text="@string/New" />

                        <ImageView
                            android:id="@+id/category_Women"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginEnd="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="20dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/women" />

                        <TextView
                            android:layout_gravity="center_horizontal"
                            android:text="@string/Women" />

                        <ImageView
                            android:id="@+id/category_Men"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginEnd="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="20dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/men" />

                        <TextView
                            android:layout_gravity="center_horizontal"
                            android:text="Men" />

                        <ImageView
                            android:id="@+id/category_Sale"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginEnd="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="20dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/sale" />

                        <TextView
                            android:layout_gravity="center_horizontal"
                            android:text="@string/Sale" />

                    </GridLayout>


                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_below="@id/category_grid"
                        android:layout_marginTop="4dp"
                        android:background="@color/colorAccent" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/item_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/view"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginStart="12dp"
                        android:nestedScrollingEnabled="false"
                        android:isScrollContainer="false" />

                </RelativeLayout>

            </android.support.v4.widget.NestedScrollView>

        </android.support.design.widget.CoordinatorLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:visibility="visible"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />


</android.support.v4.widget.DrawerLayout>